[package]
name = "Peregrine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
futures = "0.3.30"
home = "0.5.9"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.6", features = ["tokio", "http2"] }
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["serde_derive"] }
simple_logger = "5.0.0"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tower = { version = "0.4.13", features = ["balance"] }
serde_yaml = "0.9"